src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Montserrat:wght@400;600;700&family=Inter:wght@300;400;600&family=Nunito:wght@300;400;600&family=Fira+Code:wght@400;500&display=swap");

::selection {
  background: #ff8100;
  color: white;
}

/* Apply Fonts */
body {
  font-family: "Inter", sans-serif; /* Default body text */
  font-weight: 400;
  color: #333; /* Adjust text color */
  overflow-x: hidden;
  min-height: 100vh;
}

/* Headings */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Poppins", sans-serif; /* Use 'Montserrat' as alternative */
  font-weight: 600;
}

/* Code Blocks */
code,
pre {
  font-family: "Fira Code", monospace;
  background-color: #f5f5f5; /* Light gray background for better visibility */
  padding: 5px;
  border-radius: 5px;
}

.app {
  min-height: 100vh;
  transition: 0.2s;
}

.app.dark-mode {
  background: #272727;
  color: #e9e4dc;
}

.codepen-button {
  display: block;
  cursor: pointer;
  color: black;
  margin: 0 auto;
  position: relative;
  text-decoration: none;
  font-weight: 600;
  border-radius: 6px;
  overflow: hidden;
  padding: 3px;
  isolation: isolate;
}

.codepen-button::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 400%;
  height: 100%;
  background: linear-gradient(
    115deg,
    #4fcf70,
    #fad648,
    #a767e5,
    #12bcfe,
    #44ce7b
  );
  background-size: 25% 100%;
  animation: an-at-keyframe-css-at-rule-that-translates-via-the-transform-property-the-background-by-negative-25-percent-of-its-width-so-that-it-gives-a-nice-border-animation_-We-use-the-translate-property-to-have-a-nice-transition-so-it_s-not-a-jerk-of-a-start-or-stop
    0.75s linear infinite;
  animation-play-state: paused;
  translate: -5% 0%;
  transition: translate 0.25s ease-out;
}

.codepen-button:hover::before {
  animation-play-state: running;
  transition-duration: 0.75s;
  translate: 0% 0%;
}

@keyframes an-at-keyframe-css-at-rule-that-translates-via-the-transform-property-the-background-by-negative-25-percent-of-its-width-so-that-it-gives-a-nice-border-animation_-We-use-the-translate-property-to-have-a-nice-transition-so-it_s-not-a-jerk-of-a-start-or-stop {
  to {
    transform: translateX(-25%);
  }
}

.codepen-button span {
  position: relative;
  display: block;
  padding: 1rem 1.5rem;
  font-size: 1.1rem;
  background: white;
  border-radius: 3px;
  height: 100%;
  transition: 0.2s;
}

.dark-mode .codepen-button span {
  background: black;
  color: white;
}

ul.navbar-nav li a {
  white-space: nowrap;
}

navbar {
  width: 100%;
  overflow: hidden;
  transition: 0.2s;
}

.my-navbar {
  width: 100%;
  overflow-x: hidden;
}

#navbarNav {
  overflow-x: scroll;
}

::-webkit-scrollbar {
  display: none;
}

